--- a/src/components/Racetrack/Facet.scss
+++ b/src/components/Racetrack/Facet.scss
@@ -60,6 +60,7 @@
     }
 
     .Facet-value-table-row {
+      padding-right: 10px;
       color: $zorroa-greyish-brown;
       &:hover { background-color: $zorroa-hover; }
       &.selected { background-color: $zorroa-selected; }
@@ -123,7 +124,6 @@
     width: 100%;
     border: 0;
     border-spacing: 0;
-    padding-right: 10px;
   }
 
   td:last-child {
@@ -138,7 +138,7 @@
   }
 
   .Facet-value-count {
-    padding: 0;
+    padding: 0 10px 0 0;
     max-width: 0; // This looks weird, but is important! It allows cells to chop content
     @include clampText;
   }
@@ -226,4 +226,21 @@
   .rotN90Flip {
     transform: rotate(-90deg) scaleY(-1);
   }
+}
+
+.Facet-empty {
+  @include flexColCenter;
+  margin-top: 10px;
+}
+
+.Facet-empty-icon {
+  font-size: 64px;
+  color: $zorroa-lightgray;
+  margin-bottom: 20px;
+}
+
+.Facet-empty-info {
+  font-size: 16px;
+  text-transform: uppercase;
+  color: $zorroa-lightgray;
 }
